--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 streamlit
-pandas
+pandas==1.5.3
+numpy<2.0
+scikit-learn==1.3.2
+feature_engine==1.6.2
 matplotlib
-numpy
-scikit-learn<1.4
 graphviz
 beautifulsoup4
-feature_engine==1.6.2
 xgboost
 seaborn
 statsmodels
