--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit
 pandas==1.5.3
 numpy==1.26.4
 scikit-learn==1.6.1
-feature_engine==1.6.2
+feature_engine<1.6.2
 matplotlib
 graphviz
 beautifulsoup4
