--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit
-pandas==1.5.3
-numpy==1.26.4
+pandas
+numpy
 scikit-learn==1.6.1
-feature_engine<1.6.2
 matplotlib
 graphviz
 beautifulsoup4
