--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-pandas
-numpy
+streamlit==1.49.0
+pandas==2.3.2
+numpy==2.0.2
 scikit-learn==1.6.1
-matplotlib
-graphviz
-beautifulsoup4
-xgboost
-seaborn
-statsmodels
+matplotlib==3.9.4
+graphviz==0.21
+beautifulsoup4==4.13.5
+xgboost==2.1.4
+seaborn==0.13.2
+statsmodels==0.14.5
